FCBIS needs to handle transient error when opening backup cursor

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.3.0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v5.2
    • Replication 2022-02-07
    • 21
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If a WT checkpoint happens while opening a backup cursor, opening the backup cursor will fail with error 50915. FCBIS should handle this error by retrying. (Alternately we could retry internally within backup_cursor_service and never return 50915).

            Assignee:
            Matthew Russotto (Inactive)
            Reporter:
            Matthew Russotto (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: