SERVER-61964 FCBIS needs to handle transient error when opening backup cursor

GitOrigin-RevId: a30cd860fad7a6064ca9e61f4bb102bfba190f01